# cordiality

./: README.md  pyproject.toml
L1 (Iterations)/: 1-BinaryGap.py
L2 (Arrays)/: 1-CyclicRotation.py  2-OddOccurancesInArray.py
L3 (Time Complexity)/: 1-FrogJmp.py  2-PermMissingElem.py  3-TapeEquilibrium.py
L4 (Counting Elements)/: 1-FrogRiverOne.py  2-PermCheck.py  3-MaxCounters.py  4-MissingInteger.py
L5 (Prefix Sums)/: 1-PassingCars.py  2-CountDiv.py  3-GenomicRangeQuery.py  4-MinAvgTwoSlice.py
codility/L1/: BinaryGap.py
codility/L10/: Factors.py  Flags.py  Perimeter.py
codility/L17/: MinAbsSum.py
codility/L2/: CyclicRotation.py  OddOccurancesInArray.py
codility/L3/: FrogJmp.py  PermMissingElem.py  TapeEquilibrium.py
codility/L4/: FrogRiverOne.py  MaxCounters.py  MissingInteger.py  PermCheck.py
codility/L5/: CountDiv.py  GenomicRangeQuery.py  MinAvgTwoSlice.py  PassingCars.py
codility/L6/: Distinct.py  MaxProductOfThree.py  NumberOfDiscIntersections.py  Triangle.py
tests/L1/: test_BinaryGap.py
tests/L10/: test_Flags.py  test_Perimeter.py
tests/L17/: test_MinAbsSum.py
tests/L2/: test_CyclicRotation.py  test_OddOccurancesInArray.py
tests/L3/: test_FrogJmp.py  test_PermMissingElem.py  test_TapeEquilibrium.py
tests/L4/: test_FrogRiverOne.py  test_MaxCounters.py  test_MissingInteger.py  test_PermCheck.py
tests/L5/: test_CountDiv.py  test_GenomicRangeQuery.py  test_MinAvgTwoSlice.py  test_PassingCars.py
tests/L6/: Distinct.py  test_MaxProductOfThree.py  test_NumberOfDiscIntersections.py  test_Triangle.py
(+2 files in other folders)
