[tool.poetry]
name = "codility"
version = "0.1.0"
description = ""
authors = ["Ben Puryear <54869170+Ben10164@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
pytest = "^8.0.0"
black = "^24.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
